[gd_scene load_steps=3 format=3 uid="uid://bnlh5xpotna2y"]

[ext_resource type="Script" uid="uid://du825yqfaxvax" path="res://spiral.gd" id="1_3lw7s"]
[ext_resource type="Script" uid="uid://cgys4nkaf8jfp" path="res://spiral_center.gd" id="2_evqlj"]

[node name="spiral_art" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -46.0
offset_top = -13.0
offset_right = 4762.0
offset_bottom = 3132.0
color = Color(0, 0, 0, 1)

[node name="spiral" type="Node2D" parent="."]
position = Vector2(702, 374)
script = ExtResource("1_3lw7s")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 30.0
text = "r_inc:
theta_inc:
dir:
iterations:
hue begin:
HUE_inc:
ALPHA_INC:
thickness:
"

[node name="r_inc" type="HSlider" parent="."]
offset_left = 171.0
offset_top = 3.0
offset_right = 487.0
offset_bottom = 30.0
max_value = 10.0
step = 0.01

[node name="theta_inc" type="HSlider" parent="."]
offset_left = 171.0
offset_top = 36.0
offset_right = 487.0
offset_bottom = 63.0
min_value = -10.0
max_value = 10.0
step = 0.001

[node name="iterations" type="HSlider" parent="."]
offset_left = 172.0
offset_top = 102.0
offset_right = 488.0
offset_bottom = 129.0
max_value = 500.0

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 171.0
offset_top = 71.0
offset_right = 211.0
offset_bottom = 95.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = 173.0
offset_top = 139.0
offset_right = 274.0
offset_bottom = 169.0
color = Color(0, 0.666667, 1, 1)

[node name="hue" type="HSlider" parent="."]
offset_left = 174.0
offset_top = 174.0
offset_right = 479.0
offset_bottom = 190.0
max_value = 1.0
step = 0.01

[node name="alpha" type="HSlider" parent="."]
offset_left = 185.0
offset_top = 208.0
offset_right = 487.0
offset_bottom = 224.0
max_value = 3.0
step = 0.001

[node name="thickness" type="HSlider" parent="."]
offset_left = 186.0
offset_top = 241.0
offset_right = 473.0
offset_bottom = 257.0

[node name="spiral_center2" type="Node2D" parent="."]
script = ExtResource("2_evqlj")

[connection signal="value_changed" from="r_inc" to="spiral" method="_on_r_inc_value_changed"]
[connection signal="value_changed" from="theta_inc" to="spiral" method="_on_theta_inc_value_changed"]
[connection signal="value_changed" from="iterations" to="spiral" method="_on_iterations_value_changed"]
[connection signal="color_changed" from="ColorPickerButton" to="spiral" method="_on_color_picker_button_color_changed"]
[connection signal="value_changed" from="hue" to="spiral" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="alpha" to="spiral" method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="thickness" to="spiral" method="_on_thickness_value_changed"]
